--- a/src/main/webapp/templates/game.html
+++ b/src/main/webapp/templates/game.html
@@ -13,47 +13,23 @@
                     </a>
                 </div>
 
-                <div class="col-md-7">
+                <div class="col-md-8">
                     <div class="row center-block">
-                        <a data-ng-click="move(13);" class="btn btn-primary btn-sq-md">
-                            Pit 13 - <strong>{{gameBoard[13]}}</strong>
-                        </a>
-                        <a data-ng-click="move(12);" class="btn btn-primary btn-sq-md">
-                            Pit 12 - <strong>{{gameBoard[12]}}</strong>
-                        </a>
-                        <a data-ng-click="move(11);" class="btn btn-primary btn-sq-md">
-                            Pit 11 - <strong>{{gameBoard[11]}}</strong>
-                        </a>
-                        <a data-ng-click="move(10);" class="btn btn-primary btn-sq-md">
-                            Pit 10 - <strong>{{gameBoard[10]}}</strong>
-                        </a>
-                        <a data-ng-click="move(9);" class="btn btn-primary btn-sq-md">
-                            Pit 09 - <strong>{{gameBoard[9]}}</strong>
-                        </a>
-                        <a data-ng-click="move(8);" class="btn btn-primary btn-sq-md">
-                            Pit 08 - <strong>{{gameBoard[8]}}</strong>
-                        </a>
+                        <a data-ng-click="move(13);" class="btn btn-primary btn-sq-md" style="width: 80px;">Pit 13 - <strong>{{gameBoard[13]}}</strong></a>
+                        <a data-ng-click="move(12);" class="btn btn-primary btn-sq-md" style="width: 80px;">Pit 12 - <strong>{{gameBoard[12]}}</strong></a>
+                        <a data-ng-click="move(11);" class="btn btn-primary btn-sq-md" style="width: 80px;">Pit 11 - <strong>{{gameBoard[11]}}</strong></a>
+                        <a data-ng-click="move(10);" class="btn btn-primary btn-sq-md" style="width: 80px;">Pit 10 - <strong>{{gameBoard[10]}}</strong></a>
+                        <a data-ng-click="move(9);" class="btn btn-primary btn-sq-md" style="width: 80px;">Pit 09 - <strong>{{gameBoard[9]}}</strong></a>
+                        <a data-ng-click="move(8);" class="btn btn-primary btn-sq-md" style="width: 80px;">Pit 08 - <strong>{{gameBoard[8]}}</strong></a>
                     </div>
                     <br>
                     <div class="row center-block">
-                        <a data-ng-click="move(1);" class="btn btn-primary btn-sq-md">
-                            Pit 01 - <strong>{{gameBoard[1]}}</strong>
-                        </a>
-                        <a data-ng-click="move(2);" class="btn btn-primary btn-sq-md">
-                            Pit 02 - <strong>{{gameBoard[2]}}</strong>
-                        </a>
-                        <a data-ng-click="move(3);" class="btn btn-primary btn-sq-md">
-                            Pit 03 - <strong>{{gameBoard[3]}}</strong>
-                        </a>
-                        <a data-ng-click="move(4);" class="btn btn-primary btn-sq-md">
-                            Pit 04 - <strong>{{gameBoard[4]}}</strong>
-                        </a>
-                        <a data-ng-click="move(5);" class="btn btn-primary btn-sq-md">
-                            Pit 05 - <strong>{{gameBoard[5]}}</strong>
-                        </a>
-                        <a data-ng-click="move(6);" class="btn btn-primary btn-sq-md">
-                            Pit 06 - <strong>{{gameBoard[6]}}</strong>
-                        </a>
+                        <a data-ng-click="move(1);" class="btn btn-primary btn-sq-md" style="width: 80px;">Pit 01 - <strong>{{gameBoard[1]}}</strong></a>
+                        <a data-ng-click="move(2);" class="btn btn-primary btn-sq-md" style="width: 80px;">Pit 02 - <strong>{{gameBoard[2]}}</strong></a>
+                        <a data-ng-click="move(3);" class="btn btn-primary btn-sq-md" style="width: 80px;">Pit 03 - <strong>{{gameBoard[3]}}</strong></a>
+                        <a data-ng-click="move(4);" class="btn btn-primary btn-sq-md" style="width: 80px;">Pit 04 - <strong>{{gameBoard[4]}}</strong></a>
+                        <a data-ng-click="move(5);" class="btn btn-primary btn-sq-md" style="width: 80px;">Pit 05 - <strong>{{gameBoard[5]}}</strong></a>
+                        <a data-ng-click="move(6);" class="btn btn-primary btn-sq-md" style="width: 80px;">Pit 06 - <strong>{{gameBoard[6]}}</strong></a>
                     </div>
                 </div>
 
